Fix Intellij warnings